--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Cookie&display=swap");
 :root {
   --color-white: rgb(223, 223, 223);
-  --color-orange: rgb(231, 113, 77);
+  --color-white-dark: rgba(91, 91, 91, 0.61);
+  --color-orange: rgb(255, 108, 71);
   --color-black: rgb(27, 27, 27);
   --color-orange-light: rgb(255, 183, 125);
   --color-gray: rgb(73, 73, 73);
@@ -22,6 +23,14 @@ body {
   box-sizing: border-box;
   background-color: #eee;
 }
+/* dark theme */
+.dark-theme{
+  --color-black: rgb(223, 223, 223);
+  --color-white: rgb(27, 27, 27);
+}
+
+/* navbar */
+
 .navbar {
   flex-direction: row;
   background-color: transparent;
@@ -53,10 +62,17 @@ body {
 }
 .nav-brand {
   text-decoration: none;
-  color: var(--color-orange-light);
+  /* color: var(--color-orange-light); */
+  color: var(--color-white);
   font-size: 4rem;
   align-self: center;
   font-family: "Cookie", cursive;
+}
+#dark-mode{
+  padding-top: 0.8rem;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
 }
 /* Hero  */
 .hero {
@@ -69,41 +85,48 @@ body {
   height: 100vh;
   background-position: center;
 }
+/* hero headings */
 .heading {
   height: 50%;
   flex-direction: column;
   display: flex;
   position: absolute;
   top: 30%;
-  right: 19.8%;
+  right: 20%;
+  left: 1%;
   transform: translateX(-50%, -50%);
   align-items: center;
 }
 .heading-primary {
   color: var(--color-white);
   font-family: "Red Hat Display", sans-serif;
-  font-size: 6rem;
+  font-size: 4rem;
   padding-bottom: 2rem;
   letter-spacing: 0.5rem;
   animation: 1.5s moveRight ease;
 }
 .heading-secondary {
   color: var(--color-white);
-  font-size: 3.5rem;
+  font-size: 2.5rem;
   font-family: "Varela Round", sans-serif;
-  letter-spacing: 1rem;
+  letter-spacing: 0.5rem;
   animation: 1.5s moveLeft ease;
 }
 .india {
   font-family: "Laila", sans-serif;
-  font-size: 6rem;
+  font-size: 7rem;
   color: var(--color-orange);
 }
+/* hero button  */
 .button-primary {
-  font-size: 3rem;
+  align-items: center;
+  position: absolute;
+  top: 80%;
+  right: 29%;
+  font-size: 2rem;
   margin-top: 3rem;
-  padding: 1rem 3rem;
-  border-radius: 100px;
+  padding: 1rem 2rem;
+  border-radius:8px;
   text-align: center;
   text-decoration: none;
   background-color: var(--color-white);
