--- a/styles.css
+++ b/styles.css
@@ -38,10 +38,13 @@ body {
   width: 100%;
   position: fixed;
   justify-content: space-between;
+  transition: 0.4s all;
+  height: 7rem;
 }
 .nav-items {
   display: flex;
   margin-left: 3rem;
+  align-items: center;
 }
 .nav-item {
   list-style: none;
