--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ body {
   font-family: "Cookie", cursive;
 }
 #dark-mode {
-  padding-top: 0.8rem;
+  /* padding-top: 0.8rem; */
   width: 30px;
   height: 30px;
   cursor: pointer;
