--- a/homestyle.css
+++ b/homestyle.css
@@ -5,11 +5,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Cookie&display=swap");
 :root {
   --color-white: rgb(223, 223, 223);
-  --color-white-dark: rgba(91, 91, 91, 0.61);
+  --color-white-trans: rgba(255, 255, 255, 0.712);
   --color-orange: rgb(255, 108, 71);
   --color-black: rgb(27, 27, 27);
   --color-orange-light: rgb(255, 183, 125);
   --color-gray: rgb(73, 73, 73);
+  --color-gray-dark: #333;
   --color-gray-light: rgb(122, 122, 122);
   --gradient-v1: rgba(0, 0, 0, 0.651);
   --gradient-v2: rgba(0, 0, 0, 0.329);
@@ -23,7 +24,16 @@ html {
 }
 body {
   box-sizing: border-box;
-  background-color: rgb(77, 77, 77);
+  background-color: #eee;
+  background:linear-gradient(
+    to bottom right,
+    rgba(0, 0, 0, 0.7),
+    rgba(0, 0, 0, 0.6)
+  ), 
+  url("images/homeHero.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
 /* dark theme */
 .dark-theme {
@@ -32,12 +42,19 @@ body {
   --gradient-v1: rgba(0, 0, 0, 0.952);
   --gradient-v2: rgba(0, 0, 0, 0);
 }
+#dark-mode {
+    /* padding-top: 0.8rem; */
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+  }
+/* narbar */
 .navbar {
   flex-direction: row;
   background-color: transparent;
   display: flex;
   width: 100%;
-  position: fixed;
+  /* position: fixed; */
   justify-content: space-between;
   transition: 0.4s all;
   height: 6rem;
@@ -73,9 +90,111 @@ body {
   align-self: center;
   font-family: "Cookie", cursive;
 }
-#dark-mode {
-  /* padding-top: 0.8rem; */
-  width: 30px;
-  height: 30px;
-  cursor: pointer;
+/* Hero  */
+/* .hero {
+  background-image: linear-gradient(
+      to bottom right,
+      rgba(0, 0, 0, 0.7),
+      rgba(0, 0, 0, 0.6)
+    ),
+    url("images/homeHero.jpg");
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-size: cover;
+  background-position: center;
+} */
+main{
+  background-color: var(--color-white-trans);
+  margin: 10rem 5rem 5rem;
+  border-radius: 0.5rem;
+}
+
+/* section-1 */
+.section-1{
+  padding: 5rem 5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.homeHeading {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  font-size: 5rem;
+  /* margin-top: 5rem; */
+  /* border-top: 0.5rem solid var(--color-black);
+  border-bottom: 0.5rem solid var(--color-black); */
+  font-family: "Nunito", sans-serif;
+}
+.feature-text {
+  align-self: center;
+  font-size: 2rem;
+  font-family: "Red Hat Display", sans-serif;
+  letter-spacing: 1px;
+  padding: 1rem 5rem;
+  /* border: 2px solid var(--color-black); */
+}
+/* section 2 */
+.section-2{
+    padding: 2rem 5rem;
+    display: flex;
+    /* flex-direction: column; */
+    justify-content: space-around;
+  }
+
+
+/* footer  */
+.footer {
+  height: 40rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: var(--color-gray-dark);
+  font-family: "Nunito", sans-serif;
+}
+.footer-content-left {
+  display: flex;
+  border-right: 1px solid var(--color-gray-light);
+  justify-content: center;
+  width: 50%;
+}
+.footer-content-right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+}
+.footer-heading {
+  font-size: 3rem;
+  list-style: none;
+  color: var(--color-gray-light);
+  height: 5rem;
+}
+.footer-right-text {
+  width: 60%;
+}
+
+.footer-item {
+  list-style: none;
+}
+
+.footer-link {
+  text-decoration: none;
+  color: var(--color-white);
+  font-size: 2rem;
+}
+.footer-right-text {
+  font-size: 2rem;
+  color: var(--color-white);
+}
+.footer-right-text::before {
+  content: "Story Of This Project";
+  display: block;
+  color: var(--color-gray-light);
+  font-size: 3rem;
+  padding-bottom: 1rem;
 }
