--- a/homestyle.css
+++ b/homestyle.css
@@ -3,6 +3,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Laila:wght@300;400;500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300;400;500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Cookie&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"); /*font-family: 'Bebas Neue', cursive;*/
+@import url("https://fonts.googleapis.com/css2?family=Saira+Condensed&display=swap"); /*font-family: 'Saira Condensed', sans-serif;*/
+
 :root {
   --color-white: rgb(223, 223, 223);
   --color-white-trans: rgba(255, 255, 255, 0.712);
@@ -24,13 +27,12 @@ html {
 }
 body {
   box-sizing: border-box;
-  background-color: #eee;
-  background:linear-gradient(
-    to bottom right,
-    rgba(0, 0, 0, 0.7),
-    rgba(0, 0, 0, 0.6)
-  ), 
-  url("images/homeHero.jpg");
+  background: linear-gradient(
+      to bottom right,
+      rgba(0, 0, 0, 0.7),
+      rgba(0, 0, 0, 0.6)
+    ),
+    url("images/homeHero.jpg");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -43,18 +45,21 @@ body {
   --gradient-v2: rgba(0, 0, 0, 0);
 }
 #dark-mode {
-    /* padding-top: 0.8rem; */
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
-  }
+  /* padding-top: 0.8rem; */
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+}
 /* narbar */
+.header {
+  height: auto;
+}
 .navbar {
   flex-direction: row;
   background-color: transparent;
   display: flex;
   width: 100%;
-  /* position: fixed; */
+  position: fixed;
   justify-content: space-between;
   transition: 0.4s all;
   height: 6rem;
@@ -105,14 +110,15 @@ body {
   background-size: cover;
   background-position: center;
 } */
-main{
-  background-color: var(--color-white-trans);
-  margin: 10rem 5rem 5rem;
-  border-radius: 0.5rem;
-}
 
 /* section-1 */
-.section-1{
+.section-1 {
+  padding: 10rem 5rem 5rem;
+}
+.s1 {
+  background-color: var(--color-white-trans);
+  /* margin: 10rem 5rem 5rem; */
+  border-radius: 0.5rem;
   padding: 5rem 5rem;
   display: flex;
   flex-direction: column;
@@ -125,10 +131,10 @@ main{
   justify-content: center;
   align-items: center;
   font-size: 5rem;
-  /* margin-top: 5rem; */
-  /* border-top: 0.5rem solid var(--color-black);
-  border-bottom: 0.5rem solid var(--color-black); */
-  font-family: "Nunito", sans-serif;
+  /* border-bottom: 0.5rem solid var(--color-black);  */
+  /* font-family: "Nunito", sans-serif; */
+  /* font-family: 'Bebas Neue', cursive;s */
+  font-family: "Saira Condensed", sans-serif;
 }
 .feature-text {
   align-self: center;
@@ -139,13 +145,94 @@ main{
   /* border: 2px solid var(--color-black); */
 }
 /* section 2 */
-.section-2{
-    padding: 2rem 5rem;
-    display: flex;
-    /* flex-direction: column; */
-    justify-content: space-around;
-  }
+.section-2 {
+  padding: 1rem 5rem 5rem;
+  background-color: var(--color-white-trans);
+  margin: 0rem 5rem 5rem;
+  border-radius: 0.5rem;
+  padding: 5rem 5rem;
+  justify-content: center;
+}
+.s2 {
+  display: flex;
+}
+/* popular places */
+.recents {
+  margin: 0 auto;
+  width: 80vw;
+}
 
+.recents span {
+  display: block;
+  text-align: center;
+  /* font-weight: bold; */
+}
+.recent-visits {
+  margin: 0 auto;
+  margin-left: 0px;
+  padding: 20px 38px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.recent-visits span{
+  font-family: "Saira Condensed", sans-serif;
+  font-size: 4rem;
+  
+}
+
+.recent-visits-img {
+  width: 15vw;
+  height: 15vw;
+  border-radius: 50%;
+}
+/* section-3 */
+.section-3 {
+  padding: 10rem 5rem 5rem;
+  background-color: var(--color-white-trans);
+  margin: 0rem 5rem 5rem;
+  border-radius: 0.5rem;
+  padding: 5rem 5rem;
+  justify-content: center;
+}
+.s3 {
+  display: flex;
+}
+.scene{
+  width: 30vw;
+  height: 100%;
+  margin-bottom: -5px;
+}
+.blog-head{
+  font-size: 2vw;
+}
+
+.recent-container{
+  margin: 0 auto;
+  width: 80vw;
+}
+.recent-blogs{
+  width: 80vw;
+  height: 20vw;
+  display: flex;
+  margin-bottom: 2vw;
+  box-shadow: 0 0 2px rgb(0, 0, 0);
+}
+.r-blog-head-text h1{
+  font-size: 4rem;
+}
+.r-blog-head-text{
+  align-items: center;
+  text-align: center;
+  /* height: 200px; */
+  font-family: 'Bebas Neue', cursive;
+}
+.r-blog-head-text p{
+  padding: 2rem;
+  font-family: "Varela Round", sans-serif;
+  font-size: 1.5rem;
+}
 
 /* footer  */
 .footer {
