--- a/homestyle.css
+++ b/homestyle.css
@@ -175,6 +175,11 @@ body {
   height: 15vw;
   border-radius: 50%;
 }
+.recent-visits-img:hover{
+  box-shadow: 0.1rem 0rem 1.5rem rgba(71, 71, 71, 0.651);
+  /* width: 16vw;
+  height: 16vw; */
+}
 /* section-3 */
 .section-3 {
   padding: 10rem 5rem 5rem;
