--- a/goa_style.css
+++ b/goa_style.css
@@ -3,6 +3,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Laila:wght@300;400;500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300;400;500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Cookie&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans&family=Saira+Condensed&display=swap');
 :root {
   --color-white: rgb(223, 223, 223);
   --color-white-dark: rgba(91, 91, 91, 0.61);
@@ -86,7 +87,7 @@ main{
   top: 100%; left: 0; right: 0;
   padding: 20px;
   padding-top: 88px;
-  font-family: 'Century Gothic';
+  font-family: 'PT Sans', sans-serif;
   box-shadow: 0 0 2px rgb(90, 90, 90);
 }
 .scene-image{
