--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ body {
 .navbar {
   flex-direction: row;
   background-color: transparent;
+  /* background-color: var(--color-white-dark); */
   display: flex;
   width: 100%;
   position: fixed;
