--- a/login.css
+++ b/login.css
@@ -3,14 +3,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Laila:wght@300;400;500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300;400;500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Cookie&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');/* font-family: 'PT Sans', sans-serif; */
 :root {
   --color-white: rgb(223, 223, 223);
   --color-white-dark: rgba(91, 91, 91, 0.61);
+  --color-white-trans: rgba(255, 255, 255, 0.712);
   --color-orange: rgb(255, 108, 71);
   --color-black: rgb(27, 27, 27);
   --color-orange-light: rgb(255, 183, 125);
   --color-gray: rgb(73, 73, 73);
   --color-gray-light: rgb(122, 122, 122);
+  --color-blue-shade:#43caff;
   --gradient-v1: rgba(0, 0, 0, 0.651);
   --gradient-v2: rgba(0, 0, 0, 0.329);
 }
@@ -24,6 +27,10 @@ html {
 body {
   box-sizing: border-box;
   background-color: rgb(77, 77, 77);
+  background: linear-gradient(rgba(0, 0, 0, 0.185),rgba(255, 255, 255, 0.897)),url("images/loginBackground.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
 /* dark theme */
 .dark-theme {
@@ -79,6 +86,64 @@ body {
   height: 30px;
   cursor: pointer;
 }
+/* main */
+.formDiv{
+  background-color: var(--color-white-trans);
+  border-radius: 0.5rem;
+  display: flex;
+  margin:0rem 25% 0rem;
+  padding-top: 3rem;
+  padding-bottom: 8rem;
+  flex-direction: column;
+  justify-content: center;
+}
+form{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.icon{
+  height: 20px;
+  width: 20px;
+  align-items: center;
+  /* padding-top: 1rem; */
+}
+.div1{
+  /* background-color: var(--color-blue-shade); */
+  /* width: ; */
+  height: 10rem;
+  padding-top: 3rem;
+  padding-left: 28rem;
+}
+.div1 img{
+  width: 100px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+}
+.logindetail{
+  display: flex;
+  padding: 2rem 0rem 0rem;
+  justify-content: space-between;
+}
+.logindetail input{
+  text-decoration: none;
+  border: none;
+  font-family: 'PT Sans', sans-serif;
+  background-color: rgba(0, 0, 0, 0);
+  border-bottom: 1px solid rgb(44, 44, 44);
+  font-size: 1.5rem;
+}
+form button{
+  font-family: 'PT Sans', sans-serif;
+  border: none;
+  background-color: var(--color-blue-shade);
+  font-size: 1.5rem;
+  margin-top: 2rem;
+  padding: 0.6rem 1.5rem;
+}
+/* footer css */
 .footer {
   height: 40rem;
   display: flex;
