--- a/feedback.css
+++ b/feedback.css
@@ -22,8 +22,12 @@ html {
   font-size: 62.5%;
 }
 body {
+  background: linear-gradient(rgba(0, 0, 0, 0),rgba(255, 255, 255, 0)),url("images/contactBackground.jpg");
   box-sizing: border-box;
   background-color: rgb(77, 77, 77);
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
 /* dark theme */
 .dark-theme {
@@ -78,4 +82,8 @@ body {
   width: 30px;
   height: 30px;
   cursor: pointer;
+}
+.main{
+  display: flex;
+  flex-direction: column;
 }
