--- a/login.css
+++ b/login.css
@@ -17,20 +17,20 @@
   --gradient-v1: rgba(0, 0, 0, 0.651);
   --gradient-v2: rgba(0, 0, 0, 0.329);
 }
-* {
-  padding: 0;
-  margin: 0;
-}
 html {
   font-size: 62.5%;
 }
 body {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
-  background-color: rgb(77, 77, 77);
-  background: linear-gradient(rgba(0, 0, 0, 0.185),rgba(255, 255, 255, 0.897)),url("images/loginBackground.jpg");
+  background: linear-gradient(rgba(0, 183, 255, 0.541),rgba(255, 255, 255, 0.473)),url("images/loginBackground.jpg");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+  font-family: 'PT Sans', sans-serif;
+  overflow: hidden;
+  height: 100vh;
 }
 /* dark theme */
 .dark-theme {
@@ -86,62 +86,112 @@ body {
   height: 30px;
   cursor: pointer;
 }
-/* main */
-.formDiv{
-  background-color: var(--color-white-trans);
-  border-radius: 0.5rem;
-  display: flex;
-  margin:0rem 25% 0rem;
-  padding-top: 3rem;
-  padding-bottom: 8rem;
-  flex-direction: column;
-  justify-content: center;
+/* body */
+.center{
+  font-family: 'PT Sans', sans-serif; 
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 400px;
+  background: rgb(255, 255, 255);
+  border-radius: 10px;
 }
-form{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+.center h1{
+  text-align: center;
+  padding-bottom: 20px;
+  border-bottom: 1px solid silver;
+  font-size: 30px;
 }
-.icon{
-  height: 20px;
-  width: 20px;
-  align-items: center;
-  /* padding-top: 1rem; */
+.center form{
+  padding: 0 40px;
+  box-sizing: border-box;
 }
-.div1{
-  /* background-color: var(--color-blue-shade); */
-  /* width: ; */
-  height: 10rem;
-  padding-top: 3rem;
-  padding-left: 28rem;
+form .loginDetail{
+  position: relative;
+  border-bottom: 2px solid grey;
+  margin: 30px 0;
 }
-.div1 img{
-  width: 100px;
-  height: 100px;
-  display: flex;
-  align-items: center;
+.loginDetail input{
+  width: 100%;
+  padding:0 5px;
+  height: 40px;
+  font-size:16px ;
+  border: none;
+  background: none;
+  outline: none;
 }
-.logindetail{
-  display: flex;
-  padding: 2rem 0rem 0rem;
-  justify-content: space-between;
+.loginDetail label{
+  position: absolute;
+  top: 50%;
+  left: 5px;
+  color: #adadad;
+  transform: translateY(-50%);
+  font-size: 16px;
+  pointer-events: none;
+  transition: .5s;
 }
-.logindetail input{
+.loginDetail span::before{
+  content: '';
+  position: absolute;
+  top: 40px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #30acff;
+  transition: .5s;
+}
+.loginDetail input:focus ~ label,
+.loginDetail input:valid ~ label{
+  top: -5px;
+  color: #30acff;
+  transition: 0s;
+}
+.loginDetail input:focus ~ span::before,
+.loginDetail input:valid ~ span::before{
+  width: 100%;
+}
+.pass{
+  margin: -5px 0 20px 5px;
+}
+.pass a{
+  color: #a6a6a6;
   text-decoration: none;
-  border: none;
-  font-family: 'PT Sans', sans-serif;
-  background-color: rgba(0, 0, 0, 0);
-  border-bottom: 1px solid rgb(44, 44, 44);
-  font-size: 1.5rem;
+  cursor: pointer;
+  font-size: 16px;
 }
-form button{
-  font-family: 'PT Sans', sans-serif;
-  border: none;
-  background-color: var(--color-blue-shade);
-  font-size: 1.5rem;
-  margin-top: 2rem;
-  padding: 0.6rem 1.5rem;
+
+.pass a:hover{
+  text-decoration: underline;
+}
+input[type="submit"]{
+  width: 100%;
+  height: 50px;
+  border: 1px solid;
+  background: #30acff;
+  font-size: 18px;
+  color: #ffffff;
+  font-weight: 700;
+  border-radius: 25px;
+  cursor: pointer;
+  outline: none;
+}
+input[type="submit"]:hover{
+  border-color: #30acff;
+  transition: .5s;
+}
+.signUp{
+  margin: 3px 0;
+  text-align: center;
+  font-size: 15px;
+  color: #666666;
+}
+.signUp a{
+  color: #30acff;
+  text-decoration: none;
+}
+.signUp a:hover{
+  text-decoration: underline;
 }
 /* footer css */
 .footer {
