--- a/signUpStyle.css
+++ b/signUpStyle.css
@@ -16,6 +16,7 @@
   --color-blue-shade:#43caff;
   --color-gradient-v1: rgba(0, 183, 255, 0.541);
   --color-gradient-v2: rgba(255, 255, 255, 0.473);
+  /* dark mode */
 }
 html {
   font-size: 62.5%;
@@ -24,8 +25,8 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background: linear-gradient(var(--color-gradient-v1),var(--color-gradient-v2)),url("images/loginBackground.jpg");
   /* background: linear-gradient(rgba(0, 183, 255, 0.541),rgba(255, 255, 255, 0.473)),url("images/loginBackground.jpg"); */
+  background: linear-gradient(var(--color-gradient-v1),var(--color-gradient-v2)),url("images/loginBackground.jpg");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -38,7 +39,7 @@ body {
   --color-black: rgb(223, 223, 223);
   --color-white: rgb(27, 27, 27);
   --color-gradient-v1: rgba(49, 49, 49, 0.884);
-  --color-gradient-v2: rgba(68, 68, 68, 0.781);
+  --color-gradient-v2: rgba(71, 71, 71, 0.747);
 }
 .navbar {
   flex-direction: row;
