--- a/login.css
+++ b/login.css
@@ -122,6 +122,7 @@ form .loginDetail{
   border: none;
   background: none;
   outline: none;
+  color: var(--color-black)
 }
 .loginDetail label{
   position: absolute;
