--- a/feedback.css
+++ b/feedback.css
@@ -11,8 +11,8 @@
   --color-orange-light: rgb(255, 183, 125);
   --color-gray: rgb(73, 73, 73);
   --color-gray-light: rgb(122, 122, 122);
-  --gradient-v1: rgba(0, 0, 0, 0.651);
-  --gradient-v2: rgba(0, 0, 0, 0.329);
+  --color-gradient-v1: rgba(0, 0, 0, 0.315);
+  --color-gradient-v2: rgba(255, 255, 255, 0.26);
 }
 * {
   padding: 0;
@@ -22,7 +22,7 @@ html {
   font-size: 62.5%;
 }
 body {
-  background: linear-gradient(rgba(0, 0, 0, 0),rgba(255, 255, 255, 0)),url("images/contactBackground.jpg");
+  background:  linear-gradient(var(--color-gradient-v1),var(--color-gradient-v2)),url("images/contactBackground.jpg");
   box-sizing: border-box;
   background-color: rgb(77, 77, 77);
   background-size: cover;
@@ -33,8 +33,8 @@ body {
 .dark-theme {
   --color-black: rgb(223, 223, 223);
   --color-white: rgb(27, 27, 27);
-  --gradient-v1: rgba(0, 0, 0, 0.952);
-  --gradient-v2: rgba(0, 0, 0, 0);
+  --color-gradient-v1: rgba(49, 49, 49, 0.884);
+  --color-gradient-v2: rgba(71, 71, 71, 0.747);
 }
 .navbar {
   flex-direction: row;
@@ -87,3 +87,189 @@ body {
   display: flex;
   flex-direction: column;
 }
+.center{
+  font-family: 'PT Sans', sans-serif; 
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 400px;
+  background: var(--color-white);
+  border-radius: 10px;
+}
+.center h1{
+  text-align: center;
+  padding-bottom: 20px;
+  border-bottom: 1px solid silver;
+  font-size: 30px;
+  color: var(--color-black);
+}
+.center form{
+  padding: 0 40px;
+  box-sizing: border-box;
+}
+form .loginDetail{
+  position: relative;
+  border-bottom: 2px solid grey;
+  margin: 30px 0;
+}
+.loginDetail input{
+  width: 100%;
+  padding:0 5px;
+  height: 40px;
+  font-size:16px ;
+  border: none;
+  background: none;
+  outline: none;
+  color: var(--color-black);
+}
+.loginDetail label{
+  position: absolute;
+  top: 50%;
+  left: 5px;
+  color: #adadad;
+  transform: translateY(-50%);
+  font-size: 16px;
+  pointer-events: none;
+  transition: .5s;
+}
+.loginDetail span::before{
+  content: '';
+  position: absolute;
+  top: 40px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #30acff;
+  transition: .5s;
+}
+.loginDetail input:focus ~ label,
+.loginDetail input:valid ~ label{
+  top: -5px;
+  color: #30acff;
+  transition: 0s;
+}
+.loginDetail input:focus ~ span::before,
+.loginDetail input:valid ~ span::before{
+  width: 100%;
+}
+.pass{
+  margin: -5px 0 20px 5px;
+}
+.pass a{
+  color: #a6a6a6;
+  text-decoration: none;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.pass a:hover{
+  text-decoration: underline;
+}
+input[type="submit"]{
+  width: 100%;
+  height: 50px;
+  border: 1px solid;
+  background: #30acff;
+  font-size: 18px;
+  color: #ffffff;
+  font-weight: 700;
+  border-radius: 25px;
+  cursor: pointer;
+  outline: none;
+}
+input[type="submit"]:hover{
+  border-color: #30acff;
+  transition: .5s;
+}
+.signUp{
+  margin: 3px 0;
+  text-align: center;
+  font-size: 15px;
+  color: #666666;
+}
+.signUp a{
+  color: #30acff;
+  text-decoration: none;
+}
+.signUp a:hover{
+  text-decoration: underline;
+}
+* {    
+  box-sizing: border-box;    
+}    
+    
+input[type=text], select, textarea {    
+  width: 100%;    
+  padding: 12px;    
+  border: 1px solid rgb(70, 68, 68);    
+  border-radius: 4px;    
+  resize: vertical;    
+}    
+input[type=email], select, textarea {    
+  width: 100%;    
+  padding: 12px;    
+  border: 1px solid rgb(70, 68, 68);    
+  border-radius: 4px;    
+  resize: vertical;    
+}    
+    
+label {    
+  padding: 12px 12px 12px 0;    
+  display: inline-block;    
+}    
+    
+input[type=submit] {    
+  background-color: rgb(37, 116, 161);    
+  color: white;    
+  padding: 12px 20px;    
+  border: none;    
+  border-radius: 4px;    
+  cursor: pointer;    
+  float: right;    
+}    
+    
+input[type=submit]:hover {    
+  background-color: #45a049;    
+}    
+    
+.container {    
+  border-radius: 5px;    
+  background-color: #f2f2f2;    
+  padding: 20px;  
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 90%;
+  background: var(--color-white);  
+}    
+.container h1{
+  text-align: center;
+  padding-bottom: 20px;
+  border-bottom: 1px solid silver;
+  font-size: 30px;
+  color: var(--color-black);
+}
+    
+.col-25 {    
+  float: left;    
+  width: 25%;    
+  margin-top: 6px;    
+}  
+.col-25 label{
+  font-size: 18px;
+}  
+    
+.col-75 {    
+  float: left;    
+  width: 75%;    
+  margin-top: 6px;    
+}    
+    
+/* Clear floats after the columns */    
+.row:after {    
+  content: "";    
+  display: table;    
+  clear: both;    
+}    
